WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145751
REGRESSION(
r185251
): [GTK] webkit_web_context_set_disk_cache_directory() doesn't work when using shared secondary process model after
r185251
https://bugs.webkit.org/show_bug.cgi?id=145751
Summary
REGRESSION(r185251): [GTK] webkit_web_context_set_disk_cache_directory() does...
Carlos Garcia Campos
Reported
2015-06-08 00:07:02 PDT
In
r185251
the CFNetwork cache was disabled in the web process, but it also removed the disk cache directory web process initialization parameter. While we support networking in the web process when shared secondary process model is used, the network cache should still work. We can remove this if we eventually switch to use the network process unconditionally.
Attachments
Patch
(6.22 KB, patch)
2015-06-08 00:10 PDT
,
Carlos Garcia Campos
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-06-08 00:10:37 PDT
Created
attachment 254476
[details]
Patch
Carlos Garcia Campos
Comment 2
2015-06-08 08:59:51 PDT
Committed
r185317
: <
http://trac.webkit.org/changeset/185317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug