Source/WebKit2/UIProcess/gtk/WebProcessPoolGtk.cpp
@@ -28,6 +28,7 @@
 #include "config.h"
 #include "WebProcessPool.h"
 
+#include "APIProcessPoolConfiguration.h"
 #include "Logging.h"
 #include "WebCookieManagerProxy.h"
 #include "WebInspectorServer.h"
@@ -105,6 +106,7 @@ void WebProcessPool::platformInitializeWebProcess(WebProcessCreationParameters& 
         parameters.cookieAcceptPolicy = m_initialHTTPCookieAcceptPolicy;
 
         parameters.ignoreTLSErrors = m_ignoreTLSErrors;
+        parameters.diskCacheDirectory = m_configuration->diskCacheDirectory();
     }
 }
 
